git-annex (6.20160419) UNRELEASED; urgency=medium

  * Fix duplicate progress meter display when downloading from a git remote
    over http with -J.

 -- Joey Hess <id@joeyh.name>  Tue, 19 Apr 2016 12:57:15 -0400

git-annex (6.20160418) unstable; urgency=medium

  * smudge: Print a warning when annex.thin is set, as git's smudge
    interface does not allow honoring that configuration.
  * webapp: When $HOME is a git repository, and has been initialized for
    use by git-annex, opening the webapp went ahead and ran the assistant
    there, annexing all files. Since this is almost certianly not
    desirable, especially when the user is just opening the webapp from
    a dekstop menu which happens to run it in $HOME, the webapp will now not
    treat such a $HOME git repository as a git-annex repository.
  * webapp: Update url to add gitlab.com ssh key.
  * Fix bug in v6 mode that prevented treating unlocked executable files
    as annexed. If you have such files, run git annex init --version=6
    to update the cache after upgrading to this version of git-annex.
  * Preserve execute bits of unlocked files in v6 mode.
  * fsck: Warn when core.sharedRepository is set and an annex object file's
    write bit is not set and cannot be set due to the file being owned
    by a different user.
  * Fix hang when dropping content needs to lock the content on a
    ssh remote, which occurred when the remote has git-annex version
    5.20151019 or newer. (The bug was in the client side; the remote
    git-annex-shell does not need to be upgraded.)

 -- Joey Hess <id@joeyh.name>  Mon, 18 Apr 2016 18:33:52 -0400

git-annex (6.20160412) unstable; urgency=medium

  * adjust --unlock: Enters an adjusted branch in which all annexed files
    are unlocked. The v6 equivilant of direct mode, but much cleaner!
  * Upgrading a direct mode repository to v6 has changed to enter
    an adjusted unlocked branch. This makes the direct mode to v6 upgrade